[package]
name = "web_awesome_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { git = "https://github.com/stevepryde/thirtyfour" }
rand = "0.8.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }